Created 6 templates and views

--- a/site/language/en-GB/en-GB.com_teftelebudget.ini
+++ b/site/language/en-GB/en-GB.com_teftelebudget.ini
@@ -1,4 +1,10 @@
 ; Teftele World Admin Strings
 ; Copyright (C) 2021 Matchenkov Max. All rights reserved.
 
-COM_TEFTELEBUDGET_MSG_HELLO_TEFTELE="Hello TEFTELE! (FROM site side of ini file)"
+COM_TEFTELEBUDGET_MSG_HELLO_TEFTELE="Hello TEFTELE! (FROM site side of ini file)" 
+COM_TEFTELEBUDGET_MSG_HELLO_ACCMANAGER="Hello ACCMANAGER! (FROM site side of ini file)"
+COM_TEFTELEBUDGET_MSG_HELLO_ACCOUNTS="Hello ACCOUNTS! (FROM site side of ini file)" 
+COM_TEFTELEBUDGET_MSG_HELLO_GROUPMANAGER="Hello GROUPMAN! (FROM site side of ini file)" 
+COM_TEFTELEBUDGET_MSG_HELLO_INDEX="Hello INDEX! (FROM site side of ini file)" 
+COM_TEFTELEBUDGET_MSG_HELLO_REPORTS="Hello REPORTS! (FROM site side of ini file)" 
+COM_TEFTELEBUDGET_MSG_HELLO_SETTINGS="Hello SETTINGS! (FROM site side of ini file)" 
